[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/Background/bg2.jpg" type="Texture" id=1]
[ext_resource path="res://Images/Title/Start.png" type="Texture" id=2]
[ext_resource path="res://Images/Title/Title.png" type="Texture" id=3]
[ext_resource path="res://StartScreen.gd" type="Script" id=4]
[ext_resource path="res://Images/Title/Exit.png" type="Texture" id=5]

[node name="StartScreen" type="Node"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 0.819962 )
scale = Vector2( 2.00025, 1.66316 )
texture = ExtResource( 1 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 204.0
margin_top = 20.0
margin_right = 820.0
margin_bottom = 637.0
size_flags_horizontal = 4
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 616.0
margin_bottom = 175.0
size_flags_horizontal = 0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 86.0
margin_top = 191.0
margin_right = 529.0
margin_bottom = 617.0
size_flags_horizontal = 4

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 443.0
margin_bottom = 210.0
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 2 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 73.0
margin_top = 214.0
margin_right = 370.0
margin_bottom = 426.0
size_flags_horizontal = 4
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 5 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
